# pydfine

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONFIG_REFERENCE.md  CONTRIBUTING.md  NOTICE  README.md  ROADMAP.md  conftest.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-export.txt  requirements-train.txt  requirements-video.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
dfine/: __init__.py  cli.py  config.py  convert.py  downloads.py  log.py  model.py  registry.py  results.py
dfine/backends/: __init__.py
dfine/backends/native/: __init__.py  box_ops.py  coco.py  common.py  criterion.py  denoising.py  dfine.py  dfine_decoder.py  dfine_utils.py  dist.py  hgnetv2.py  hybrid_encoder.py  loader.py  mask_decoder.py  matcher.py  ops.py  postprocessor.py  sem_seg_criterion.py  sem_seg_decoder.py  sem_seg_postprocessor.py
dfine/export/: __init__.py  onnx.py
dfine/track/: __init__.py  byte_tracker.py  kalman_filter.py
dfine/train/: __init__.py  augment.py  dataset.py  distributed.py  ema.py  evaluator.py  logger.py  scheduler.py  seg_dataset.py  seg_evaluator.py  trainer.py  visualizer.py
docs/: ARCHITECTURE.md  CONFIG_REFERENCE.md  ROADMAP.md  SEG_ROADMAP.md  index.md  seg-training.md
docs/api/: config.md  data.md  export.md  model.md  results.md  tracking.md
scripts/: ci_check_base_import.py  gen_parity_fixture.py  gen_seg_parity_fixture.py  gen_semseg_parity_fixture.py
tests/: test_augment.py  test_backbone.py  test_cli.py  test_config.py  test_convert.py  test_criterion.py  test_dataset.py  test_decoder.py  test_distributed.py  test_encoder.py  test_evaluator.py  test_export.py  test_loader.py  test_log.py  test_mask_decoder.py  test_model.py  test_parity.py  test_postprocessor.py  test_registry.py  test_results.py  test_seg_dataset.py  test_seg_decoder.py  test_seg_evaluator.py  test_seg_model.py  test_seg_parity.py  test_sem_seg_criterion.py  test_sem_seg_decoder.py  test_sem_seg_model.py  test_sem_seg_predict.py  test_semseg_parity.py  test_tracker.py  test_trainer.py  test_video.py
tests/data/: parity_l.pt  parity_m.pt  parity_n.pt  parity_s.pt  parity_x.pt  seg_parity_n.pt  semseg_parity.pt
