[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfine"
version = "0.0.1"
description = "Ultralytics-style, config-first Python library for the D-FINE real-time object detector."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "pydfine contributors" }]
keywords = ["d-fine", "object-detection", "detr", "computer-vision", "pytorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Core install stays light: the config-first surface (DFINEConfig, presets, CLI
# `dfine models`) is pure-Python and needs no torch. Heavy deps live in extras so
# `pip install dfine` doesn't force a torch build on users who only inspect configs.
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
# Core runtime for the native (Path A) port — model build + inference.
torch = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "pillow>=9.0",
]
# Training + validation (Hungarian matcher, COCO eval, logging, yaml interop).
train = [
    "dfine[torch]",
    "scipy>=1.10",
    "faster-coco-eval>=1.6.6",
    "tensorboard>=2.13",
    "matplotlib>=3.6",  # loss_curve.png training-progress plot
    "pyyaml>=6.0",
]
export = [
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxsim>=0.4",
]
# Video I/O for DFINE.predict_video (decode frames + write annotated mp4).
video = [
    "dfine[torch]",
    "opencv-python>=4.6",
]
dev = [
    "dfine[torch]",  # torch/torchvision/pillow — so the full suite runs (not skips)
    "ruff>=0.7",
    "pytest>=7.0",
    "pre-commit>=3.5",
    "opencv-python-headless>=4.6",  # so predict_video tests run in CI (headless)
    "scipy>=1.10",  # Hungarian matcher — so criterion/matcher tests run in CI
]

[project.urls]
Homepage = "https://github.com/Peterande/D-FINE"
Upstream = "https://github.com/Peterande/D-FINE"
Paper = "https://arxiv.org/abs/2410.13842"

[project.scripts]
dfine = "dfine.cli:main"

[tool.setuptools.packages.find]
include = ["dfine*"]

[tool.ruff]
line-length = 100
target-version = "py39"
# The upstream clone is a reference checkout, not our code — never lint/format it.
# force-exclude makes the exclude apply even when pre-commit passes explicit paths.
extend-exclude = ["D-FINE", "reference"]
force-exclude = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
